@@ -497,6 +497,19 @@ namespace Bam.Core
                 case "removetrailingseperator":
                     return argument.TrimEnd(System.IO.Path.DirectorySeparatorChar);
 
+                case "relativeto":
+                    {
+                        var split = argument.Split(',');
+                        var path = split[0];
+                        var pivot = split[1] + System.IO.Path.DirectorySeparatorChar;
+                        var relative = RelativePathUtilities.GetPath(path, pivot);
+                        if (relative.Equals(path))
+                        {
+                            throw new Exception("Unable to determine relative path of {0} from {1}", path, pivot);
+                        }
+                        return relative;
+                    }
+
                 default:
                     throw new Exception("Unknown post-function '{0}' in TokenizedString '{1}'", functionName, this.OriginalString);
             }
